--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-wheel-of-fortune": "0.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
