--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.11.7",
-    "react-native-wheel-of-fortune": "0.0.8"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
