--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.2.1",
-    "@react-native-community/slider": "3.0.0",
-    "d3-shape": "^2.0.0",
-    "expo": "~38.0.8",
-    "expo-file-system": "~9.0.1",
-    "expo-image-picker": "~8.3.0",
-    "expo-permissions": "~9.0.1",
-    "expo-sqlite": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-svg": "12.1.0",
-    "react-native-web": "~0.11.7",
-    "expo-av": "~8.2.1"
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/slider": "^4.1.12",
+    "d3-shape": "^3.0.1",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-av": "~10.1.3",
+    "expo-file-system": "~13.0.3",
+    "expo-image-picker": "~11.0.3",
+    "expo-permissions": "~13.0.3",
+    "expo-sqlite": "~10.0.3",
+    "expo-status-bar": "~1.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "8.5.1"
   },
   "private": true
 }
